Use only IPv4 for loading RPM packages while building docker test image
Http proxy may not support Internet Protocol version 6. So, it is better
to use only IPv4 on yum.

--- a/test/docker/Dockerfile
+++ b/test/docker/Dockerfile
@@ -22,6 +22,7 @@ RUN sed -i '/\[base\]/,/gpgkey=/{/gpgkey=/s/$/\'$'\n''exclude = postgres*/;}' /e
 # http://yum.postgresql.org/repopackages.php
 # Note: EPEL is required by postgis and also supplies pv.
 
+RUN echo "ip_resolve=IPv4" >> /etc/yum.conf
 RUN yum -y update 
 RUN yum -y localinstall https://download.postgresql.org/pub/repos/yum/9.5/redhat/rhel-7-x86_64/pgdg-centos95-9.5-2.noarch.rpm
 RUN yum -y install postgresql95 postgresql95-server postgresql95-contrib postgresql95-libs postgis2_95 pv && \
