Reduced the number of layers (RUN commands)

--- a/test/docker/Dockerfile
+++ b/test/docker/Dockerfile
@@ -11,26 +11,25 @@ MAINTAINER "fmi"
 ENV PGDATA=/var/lib/pgsql/data/9.5
 
 # Explicitly set user/group IDs
-RUN groupadd -r postgres && useradd -r -g postgres postgres
+RUN groupadd -r postgres && useradd -r -g postgres postgres && \
+   # Inject excludes into YUM config files.
+   # https://wiki.postgresql.org/wiki/YUM_Installation
+   sed -i '/\[base\]/,/gpgkey=/{/gpgkey=/s/$/\'$'\n''exclude = postgres*/;}' /etc/yum.repos.d/CentOS-Base.repo && \
+   sed -i '/\[updates\]/,/gpgkey=/{/gpgkey=/s/$/\'$'\n''exclude = postgres*/;}' /etc/yum.repos.d/CentOS-Base.repo && \
 
-# Inject excludes into YUM config files.
-# https://wiki.postgresql.org/wiki/YUM_Installation
-RUN sed -i '/\[base\]/,/gpgkey=/{/gpgkey=/s/$/\'$'\n''exclude = postgres*/;}' /etc/yum.repos.d/CentOS-Base.repo && \
-    sed -i '/\[updates\]/,/gpgkey=/{/gpgkey=/s/$/\'$'\n''exclude = postgres*/;}' /etc/yum.repos.d/CentOS-Base.repo
+   # Install newest PostgreSQL major version repo.
+   # http://yum.postgresql.org/repopackages.php
+   # Note: EPEL is required by postgis and also supplies pv.
 
-# Install newest PostgreSQL major version repo.
-# http://yum.postgresql.org/repopackages.php
-# Note: EPEL is required by postgis and also supplies pv.
+   echo "ip_resolve=IPv4" >> /etc/yum.conf && \
+   curl -4 "https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm" -o /tmp/epel-release-latest-7.noarch.rpm && \
+   yum --nogpgcheck -y install /tmp/epel-release-latest-7.noarch.rpm && \
 
-RUN echo "ip_resolve=IPv4" >> /etc/yum.conf
-RUN curl -4 "https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm" -o /tmp/epel-release-latest-7.noarch.rpm
-RUN yum --nogpgcheck -y install /tmp/epel-release-latest-7.noarch.rpm
-
-RUN yum -y update 
-RUN yum -y localinstall https://download.postgresql.org/pub/repos/yum/9.5/redhat/rhel-7-x86_64/pgdg-centos95-9.5-2.noarch.rpm
-RUN yum -y install postgresql95 postgresql95-server postgresql95-contrib postgresql95-libs postgis2_95 pv && \
-    yum clean all && rm -rf /tmp/*
-RUN yum -y install lsof
+   yum -y update  && \
+   yum -y localinstall https://download.postgresql.org/pub/repos/yum/9.5/redhat/rhel-7-x86_64/pgdg-centos95-9.5-2.noarch.rpm && \
+   yum -y install postgresql95 postgresql95-server postgresql95-contrib postgresql95-libs postgis2_95 pv && \
+   yum clean all && rm -rf /tmp/* && \
+   yum -y install lsof
 
 # The database dumps
 COPY fminames-test.sql.gz /tmp
@@ -46,11 +45,9 @@ COPY icemap-test.sql.gz /tmp
 COPY icemap-copy.tar.gz /tmp
 COPY mosaic-radar-test.dmp.gz /tmp
 
-RUN tar xvf /tmp/icemap-copy.tar.gz -C /tmp
-
-RUN mkdir -p ${PGDATA}
-
-RUN mkdir -p /etc/provision /var/run/postgresql && \
+RUN tar xvf /tmp/icemap-copy.tar.gz -C /tmp && \
+    mkdir -p ${PGDATA} && \
+    mkdir -p /etc/provision /var/run/postgresql && \
     chown -R postgres ${PGDATA} /var/run/postgresql /tmp /etc/provision
 
 USER postgres
@@ -86,13 +83,13 @@ RUN /usr/pgsql-9.5/bin/pg_ctl -w -s -D ${PGDATA} -o "-p 5432" start && \
     /usr/pgsql-9.5/bin/psql icemap2storage_ro admin -c "CREATE SCHEMA icemap;" && \
     /usr/pgsql-9.5/bin/psql icemap2storage_ro admin -c "CREATE SCHEMA icemap_static;" && \
     /usr/pgsql-9.5/bin/psql icemap2storage_ro admin -c "CREATE EXTENSION postgis SCHEMA public;" && \
-#   /usr/pgsql-9.5/bin/psql -c "ALTER USER admin NOLOGIN;" && \
-    /usr/pgsql-9.5/bin/pg_ctl -w -s -D ${PGDATA} -o "-p 5432" stop
+#   /usr/pgsql-9.5/bin/psql -c "ALTER USER admin NOLOGIN;"
+    /usr/pgsql-9.5/bin/pg_ctl -w -s -D ${PGDATA} -o "-p 5432" stop && \
 
-# Populate database server from dumps. You might want to add
-# --set ON_ERROR_STOP=on as an argument to psql, but the current fminames SQL
-# dump will not load in that case.
-RUN cd /tmp/ && pv -f fminames-test.sql.gz | gunzip > fminames.sql && \
+    # Populate database server from dumps. You might want to add
+    # --set ON_ERROR_STOP=on as an argument to psql, but the current fminames SQL
+    # dump will not load in that case.
+    cd /tmp/ && pv -f fminames-test.sql.gz | gunzip > fminames.sql && \
     /usr/pgsql-9.5/bin/pg_ctl -w -s -D ${PGDATA} -o "-p 5432" start && \
     pv -f /tmp/fminames.sql | /usr/pgsql-9.5/bin/psql fminames && \
     /usr/pgsql-9.5/bin/psql fminames -c "GRANT INSERT ON public.geonames TO fminames_user;" && \
@@ -147,13 +144,13 @@ RUN cd /tmp/ && pv -f fminames-test.sql.gz | gunzip > fminames.sql && \
     rm /tmp/mosaic-radar-test.dmp.gz && \
     /usr/pgsql-9.5/bin/psql gis admin -c "GRANT USAGE ON SCHEMA mosaic TO gis_user;" && \
     /usr/pgsql-9.5/bin/psql gis admin -c "GRANT SELECT ON ALL TABLES IN SCHEMA mosaic TO gis_user;" && \
+    /usr/pgsql-9.5/bin/pg_ctl -w -s -D ${PGDATA} -o "-p 5432" stop && \
 
-    /usr/pgsql-9.5/bin/pg_ctl -w -s -D ${PGDATA} -o "-p 5432" stop
-
-RUN chmod 0700 ${PGDATA}
+    chmod 0700 ${PGDATA}
 
 # PostgreSQL is set to listen on TCP port 5444.
 EXPOSE 5444
 
 #Launch the daemon
 ENTRYPOINT exec /usr/pgsql-9.5/bin/postgres -o "-p 5444" -D /var/lib/pgsql/data/9.5
+
