Switched to -std=c++11 and added -lpthread as is now required

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,7 @@ all: tester
 test: tester
 
 tester: Tester.cpp
-	 g++ -o tester -std=c++0x -O2 -I /usr/include/smartmet/ Tester.cpp -lboost_system -lboost_filesystem -lboost_thread -lrt -lboost_program_options -DNDEBUG
+	 g++ -o tester -std=c++11 -DNDEBUG -O2 -I /usr/include/smartmet/ Tester.cpp -lboost_system -lboost_filesystem -lboost_thread -lrt -lboost_program_options -lpthread
 
 clean:
 	rm tester
