Start server after /smartmet/data has been mounted (BRAINSTORM-1409)
We use "After" instead of "Requires" in case /smartmet/data is not in use.

--- a/systemd/smartmet-server.service
+++ b/systemd/smartmet-server.service
@@ -4,6 +4,9 @@ Description=Smartmet Weather Server
 
 # Not required, but must be started after if docker is in use
 After=docker.service
+# Not required, but preferable if the mount exists
+After=smartmet-data.mount
+
 # Requires=docker.service
  
 [Service]
