--- a/loadtest/Makefile
+++ b/loadtest/Makefile
@@ -9,4 +9,4 @@ tester: Tester.cpp
 	 g++ -o tester -std=c++11 -DNDEBUG -O2 -I /usr/include/smartmet/ Tester.cpp -lboost_system -lboost_filesystem -lboost_thread -lrt -lboost_program_options -lpthread
 
 clean:
-	rm tester
+	rm -f tester
