Fix testing in CI environment

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,8 @@
 
-test: ../smartmetd startup-test.sh
-	bash ./startup-test.sh
+SMARTMETD=$(shell test -e ../smartmetd && echo `pwd`/../smartmetd || echo /usr/sbin/smartmetd)
+
+test: $(SMARTMETD) startup-test.sh
+	bash ./startup-test.sh $(SMARTMETD)
 	@echo "Startup test OK"
 
 clean:
