--- a/systemd/smartmet-server.service
+++ b/systemd/smartmet-server.service
@@ -18,6 +18,10 @@ EnvironmentFile=/etc/smartmet/smartmetd.env
 ExecStart=/usr/sbin/smartmetd --configfile $CONFIGFILE
 
 LimitCORE=infinity
+# LimitCore=0
+
+CoredumpFilter=default
+# CoredumpFilter=private-anonymous
 
 # Do not retry too fast if there are some I/O or similar issues
 Restart=always
