--- a/systemd/smartmet-server.service
+++ b/systemd/smartmet-server.service
@@ -18,7 +18,7 @@ EnvironmentFile=/etc/smartmet/smartmetd.env
 ExecStart=/usr/sbin/smartmetd --configfile $CONFIGFILE
 
 LimitCORE=infinity
-# LimitCore=0
+# LimitCORE=0
 
 # RHEL7/RHEL8 do not yet support the CoredumpFilter setting
 # CoredumpFilter=default
