--- a/loadtest/Makefile
+++ b/loadtest/Makefile
@@ -1,12 +1,23 @@
+include $(shell echo $${PREFIX-/usr})/share/smartmet/devel/makefile.inc
+
 PROG = $(patsubst %.test,%,$(wildcard *.test))
 TEST = $(PROG:%=%.test)
+
+LIBS := \
+	-lsmartmet-macgyver \
+	-lboost_system \
+	-lboost_filesystem \
+	-lboost_thread \
+	-lrt \
+	-lboost_program_options \
+	-lpthread
 
 all: tester
 
 test: tester
 
 tester: Tester.cpp
-	 g++ -o tester -std=c++11 -DNDEBUG -O2 -I /usr/include/smartmet/ Tester.cpp -lboost_system -lboost_filesystem -lboost_thread -lrt -lboost_program_options -lpthread
+	 g++ -o tester $(CFLAGS) $(INCLUDES) -DNDEBUG Tester.cpp $(LIBS)
 
 clean:
 	rm -f tester
